--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "magic-numbers",
+  "name": "@anthonybernardi/magic-numbers",
   "version": "1.0.0",
-  "description": "",
+  "description": "For all your magical number needs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/anthonybernardi/magic-numbers.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Anthony Bernardi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/anthonybernardi/magic-numbers/issues"
